# pr-tracker

./: .env.example  .gitignore  AGENTS.md  README.md  Review Queue Wireframes (standalone).html  docker-compose.yml  package.json  pnpm-lock.yaml  tsconfig.base.json
apps/api/: package.json
apps/api/src/: app.ts  (+13 more)
apps/desktop/: index.html  package.json  tsconfig.json  vite.config.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: lib.rs
apps/web/: index.html  package.json  tsconfig.json  vite.config.ts
apps/web/src-tauri/: Cargo.toml  tauri.conf.json
apps/web/src-tauri/capabilities/: default.json
apps/web/src-tauri/src/: lib.rs  main.rs
apps/worker/: package.json
docs/: ai-insights-dashboard-spec.md  ai-insights-research.md  ai-insights-view-plan.md  ai-integration-research.md  ai-mode-feature-research.md  commit-guidelines.md  core-workflow-plan.md  development-practices.md  insights-dashboard-plan.md  local-desktop-database-schema.md  local-desktop-database-schema.sql  local-desktop-migration-plan.md  local-storage-and-chat-plan.md  localhost-github-setup.md  onboarding-flow-plan.md  reviewer-research-feature-specs.md  reviewer-ui-phase-1-spec.md  reviewer-ui-v1-spec.md  saas-database-schema.md  saas-database-schema.sql  stalled-on-you-section-brief.md  sync-and-loading.md  sync-redesign-proposal.md  ui-ux-audit-2026-06-10.md  user-managed-buckets-and-new-activity-plan.md  wireframe-reference.md
scripts/: codex-brief-lab.ts  codex-dashboard-lab.ts  sample-data.mjs
(+101 files in other folders)
