[package]
name = "pr-tracker"
version = "0.1.0"
description = "Local desktop PR review tracker"
authors = ["pr-tracker"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "pr_tracker_desktop"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.1", features = [] }

[dependencies]
libc = "0.2"
log = "0.4"
serde_json = "1.0"
tauri = { version = "2.11.2", features = [] }
tauri-plugin-log = "2"
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
tauri-plugin-sql = { version = "2.4.0", features = ["sqlite"] }
tauri-plugin-stronghold = "2"
